spacing cleanup and remove scrolling bounding box on license page that cause cause webkit scroll bar bug (#2869)
* spacing cleanup and remove scrolling bounding box on license page that cause cause webkit scroll bar bug

* nbsp to prevent word break

--- a/web/src/scss/components/apps/AppLicense.scss
+++ b/web/src/scss/components/apps/AppLicense.scss
@@ -13,7 +13,8 @@
   background: $sub-nav-color;
   border-radius: 6px;
   padding: 15px;
-  width: 80%;
+  width: 100%;
+  max-width: 960px;
   margin-top: 30px;
 }
 
@@ -92,8 +93,18 @@
   color: #F7B500;
 }
 
-.Details--wrapper {
-  overflow: scroll;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+.entitlementItems {
+  line-height: 1.7;
+  font-weight: 500;
+  font-size: 12px;
+  color: $text-color-secondary;
+
+  & > span {
+    margin-top: 12px;
+    margin-right: 20px;
+  }
+
+  & > span:last-child {
+    margin-right: 0;
+  }
 }
