--- a/web/src/scss/components/troubleshoot/SupportBundleList.scss
+++ b/web/src/scss/components/troubleshoot/SupportBundleList.scss
@@ -56,10 +56,6 @@
     width: 20px;
   }
 
-  .bundle-row {
-    padding: 0 12px;
-  }
-
   .analysis-icon-wrapper {
     margin-right: 12px;
 
